fixed spacing problems

--- a/src/scss/blocks/_curtain-list.scss
+++ b/src/scss/blocks/_curtain-list.scss
@@ -48,7 +48,7 @@
             line-height: 1;
             height: fit-content;
             > * {
-                padding: 0 var(--space-s) 0;
+                padding: 0 var(--s-300) 0;
             }
         }
 
