--- a/src/scss/blocks/_instagram-embed.scss
+++ b/src/scss/blocks/_instagram-embed.scss
@@ -1,4 +1,4 @@
-$spacing: var(--space-s-m);
+$spacing: var(--s-400);
 
 .instagram-embed {
     border: 1px solid var(--color-dim);
