--- a/src/scss/blocks/_sidebar.scss
+++ b/src/scss/blocks/_sidebar.scss
@@ -1,16 +1,16 @@
 .sidebar {
-  display: flex;
-  flex-wrap: wrap;
-  gap: var(--sidebar-gutter, var(--space-m));
+    display: flex;
+    flex-wrap: wrap;
+    gap: var(--sidebar-gutter, var(--s-400));
 
-  > * {
-    flex-grow: 1;
-    flex-basis: var(--sidebar-width, 16rem);
-  }
+    > * {
+        flex-grow: 1;
+        flex-basis: var(--sidebar-width, 16rem);
+    }
 
-  > :first-child {
-    flex-basis: 0;
-    flex-grow: 999;
-    min-width: calc(60% - var(--sidebar-gutter, var(--space-m)));
-  }
+    > :first-child {
+        flex-basis: 0;
+        flex-grow: 999;
+        min-width: calc(60% - var(--sidebar-gutter, var(--s-400)));
+    }
 }
